<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_content_horizontal_padding"
    android:paddingTop="@dimen/dialog_content_top_padding"
    android:paddingEnd="@dimen/dialog_content_horizontal_padding">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchClearBrowsingData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_browsing_data" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchClearSandboxData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/clear_sandbox_storage"
        android:visibility="gone" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchClearTranslations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/clear_translations" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchFactoryReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/factory_reset" />

</LinearLayout>
